amended grid width as having issues diaplying layout on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
                           "nav		nav"
                           "left		right"
                           "footer	footer";
-    grid-template-columns: 550px 400px;
+    grid-template-columns: 500px 400px;
     grid-template-rows: 120px 50px 600px 200px;
   }
   h1 {
